--- a/BBSimpleCocoapodsDevDependencies/Podfile
+++ b/BBSimpleCocoapodsDevDependencies/Podfile
@@ -9,13 +9,16 @@ platform :ios
 # Refer to the parent folder to grab the podspec locally
 # this means we can edit it and changes will be made in that folder
 
-pod "BBSimpleCocoapodsDevDependencies", :path => "../Podspec"
+def shared_pods
+  pod "BBSimpleCocoapodsDevDependenciesLib", :path => "../Podspec"
+end
 
 # By default CocoaPods only makes changes to your main library
 # so we ensure that the test library gets the pod by including it here.
 
 # As it is included earlier with path CocoaPods will use the same version
 
-target :BBSimpleCocoapodsDevDependenciesTests do
-  pod "BBSimpleCocoapodsDevDependencies"
+target :BBSimpleCocoapodsDevDependencies do
+  shared_pods
 end
+
